total restructure: end2end case works!

--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,4 @@
 /MoviesIds.txt
 /import_omdp.json
 /_49836d3df9f40f803323ac9d614fcb94_Lecture16.pdf
-/ml/ex8_cofi.m
+/frontend/mysite/polls/ml/ex8_cofi.m
