--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 /venv/
 /.idea/
+/view-source_https___www.imdb.com_chart_top__ref_=nv_mv_250.html
+/view-source_https___www.imdb.com_chart_moviemeter.html
+/MoviesIds.txt
+/import_omdp.json
+/_49836d3df9f40f803323ac9d614fcb94_Lecture16.pdf
+/frontend/mysite/polls/ml/ex8_cofi.m
