--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ bson==0.5.8
 confusable-homoglyphs==3.2.0
 dataclasses==0.6
 dj-database-url==0.5.0
-django
+django==2.2.11
 django-bootstrap3==12.0.3
 django-braces==1.14.0
 django-model-utils==4.0.0
