--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ django-registration-redux==2.7
 django-star-ratings==0.9.1
 djongo==1.3.1
 dnspython==1.16.0
+django-fontawesome
 gunicorn==20.0.4
 numpy==1.18.1
 psycopg2==2.7.5
@@ -23,3 +24,4 @@ six==1.14.0
 sqlparse==0.2.4
 swapper==1.1.2.post1
 whitenoise==5.0.1
+
